kubernetes/infrastructure/evedata.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: vanguard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: voyager
    ingress.appscode.com/type: HostPort
    ingress.appscode.com/use-host-port: "true"
    ingress.appscode.com/replicas: '2'
spec:
  tls:
    - secretName: cert-evedata
      hosts:
      - evedata.org
      - www.evedata.org
      - mail.evedata.org
      - grafana.evedata.org
      - log.evedata.org
      - scope.evedata.org
  nodeSelector:
    loadbalancer: voyager
  rules:
  - host: www.evedata.org
    http:
      paths:
      - backend:
          serviceName: vanguard.evedata
          servicePort: '3000'
  - host: evedata.org
    http:
      paths:
      - backend:
          serviceName: vanguard.evedata
          servicePort: '3000'
  - host: scope.evedata.org
    http:
      paths:
      - backend:
          serviceName: scope-auth.kube-system
          servicePort: '80'
  - host: log.evedata.org
    http:
      paths:
      - backend:
          serviceName: kibana-auth.kube-system
          servicePort: '80'
  - host: grafana.evedata.org
    http:
      paths:
      - backend:
          serviceName: grafana.monitoring
          servicePort: '3000'
  - host: mail.evedata.org
    tcp:
      port: 993
      backend:
        serviceName: mailserver.evedata
        servicePort: '993'
  - host: mail.evedata.org
    tcp:
      port: 465
      backend:
        serviceName: mailserver.evedata
        servicePort: '465'
